<resources>
    <string name="app_name">FST Android Task 1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up_header">Sign up for free today!</string>
    <string name="sign_up_button">Sign up for free</string>
    <string name="terms">By signing-up, you agree to the terms and conditions and the privacy policies of this training activity.</string>
    <string name="error_signup_complete_fields">Please complete all the fields before creating your account.</string>
    <string name="error_login_incorrect">Email and password combination is incorrect.</string>
    <string name="error_login_complete_fields">Please enter your email and password combination.</string>
    <string name="error_signup_password_length">Password should be at least 6 characters in length.</string>
    <string name="error_signup_password_confirm">Password does not match.</string>
    <string name="sign_in">Sign in</string>
    <string name="login_header">Sign in to your account</string>
    <string name="login_signup_link">Don\'t have an account? <b><u>Sign up</u></b> for free!</string>
    <string name="login_login_link">Already have an account? <b><u>Login</u></b> here.</string>
    <string name="error_failed">Failed to process request at this time.</string>
    <string name="account_created">Your account has been created.</string>
    <string name="account_login">You have logged-in.</string>
    <string name="home">Home</string>
    <string name="feeds">Feeds</string>
    <string name="others">Others</string>
</resources>